# agentic-dart

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  apply_logging.py  dart-architecture.drawio
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: accuracy_regression.yml  bug_report.yml  mcp_function_proposal.yml
.github/workflows/: ci.yml
dart_agent/: README.md  pyproject.toml
dart_agent/src/dart_agent/: __init__.py  live.py
dart_audit/: README.md  pyproject.toml
dart_audit/src/dart_audit/: __init__.py  cli.py  verify.py
dart_corr/: README.md
dart_mcp/: README.md  pyproject.toml
dart_mcp/src/dart_mcp/: __init__.py  _v04_expansion.py  server.py  server_stdio.py
dart_playbook/: README.md  senior-analyst-v1.yaml  senior-analyst-v2.yaml  senior-analyst-v3.yaml
docs/: DEVPOST_SUBMISSION.md  accuracy-report.md  architecture.md  case-pth-timestomp.md  comparison.md  live-mode.md  running-on-macos.md  troubleshooting.md
examples/: demo-run.sh
examples/case-studies/case-01-ipkvm-insider/: README.md
examples/case-studies/case-02-lotl-powershell/: README.md
examples/case-studies/case-03-macos-remote-admin/: README.md
examples/case-studies/case-04-phishing-to-exfil/: README.md
examples/case-studies/case-05-authentication-lateral/: README.md
scripts/: install.sh  measure_accuracy.py
tests/: test_agent_self_correction.py  test_audit_chain.py  test_extended_mcp.py  test_live_mcp.py  test_mcp_bypass.py  test_mcp_surface.py  test_sigma_matcher.py
yushin_agent/: pyproject.toml
yushin_agent/src/yushin_agent/: __init__.py  live.py
yushin_audit/: pyproject.toml
yushin_mcp/: pyproject.toml
yushin_mcp/src/yushin_mcp/: __init__.py  server.py  server_stdio.py
(+15 files in other folders)
