[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dart-mcp"
version = "0.4.1"
description = "Agentic-DART typed, read-only forensic MCP server (35 functions)"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
stdio = [
    "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
