[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yushin-agent"
version = "0.2.0"
description = "YuShin autonomous DFIR agent (deterministic + live modes)"
requires-python = ">=3.10"
dependencies = [
    "yushin-audit",
    "yushin-mcp",
]

[project.optional-dependencies]
live = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
